# payload_migration

./: .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yaml  pyproject.toml  requirements.txt  requirements_new.txt  setup.py
config/: application_config.yaml
payload_migration/: __main__.py  __main___old.py  logger_test.py  unit_of_work.py
payload_migration/config/: __init__.py  payload_migration_config.py
payload_migration/db2/: __init__.py  db2_connection_impl.py  db_connection.py
payload_migration/executor/: executor.py  parallel_executor.py
payload_migration/logging/: __init__.py  logging_setup.py
payload_migration/processor/: unit_of_work_processor.py  unit_of_work_processor_impl.py
payload_migration/resources/: payload_migration_config.yaml  payload_migration_config_NEW.yaml  payload_migration_config_SAMPLE.yaml
payload_migration/sanity_checker/: sanity_checker_impl.py
payload_migration/slicer/: Slicer.py  SlicerImpl.py  slicer.py  slicer_impl.py
payload_migration/tape_import_confirmer/: tape_import_confirmer.py  tape_import_confirmer_impl.py
payload_migration/tape_processor/: tape_processor.py  tape_processor_factory.py  tape_processor_factory_impl.py  tape_processor_impl.py
payload_migration/tape_register/: tape_register.py  tape_register_impl.py  tape_status.py
payload_migration/uploader/: hcp_uploader.py  hcp_uploader_aws_cli.py  hcp_uploader_impl.py
scripts/: parallel_performance_test.sh
unit_of_work/: __main__.py  unit_of_work.py
unit_of_work.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+47 files in other folders)
